--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"/>
 
     <FrameLayout
-        android:id="@+id/frame_layout_main"
+        android:id="@+id/frame_layout_detail"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </FrameLayout>
