--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.example.realestatemanager.MainActivity"
-    android:gravity="center">
+    android:id="@+id/drawer_layout"
+    tools:openDrawer="start"
+    tools:context="com.example.realestatemanager.MainActivity">
 
-    <include
-        layout="@layout/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <androidx.drawerlayout.widget.DrawerLayout
-        android:id="@+id/drawer_layout"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:openDrawer="start">
+        android:orientation="vertical">
 
-        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            android:id="@+id/main_activity_swipe_container"
+        <include
+            layout="@layout/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <FrameLayout
+            android:id="@+id/frame_layout_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+        </FrameLayout>
 
-        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    </LinearLayout>
 
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/nav_view"
@@ -36,17 +36,6 @@
             app:itemIconTint="#000000"
             android:fitsSystemWindows="true"/>
 
-        <FrameLayout
-            android:id="@+id/frame_layout_main"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </FrameLayout>
+
 
     </androidx.drawerlayout.widget.DrawerLayout>
-
-
-
-
-
-
-</LinearLayout>
