--- a/app/src/main/res/layout/activity_add_form.xml
+++ b/app/src/main/res/layout/activity_add_form.xml
@@ -53,10 +53,10 @@
 
         </LinearLayout>
 
-        <!--<androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/photo_recycler_view"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_photo_add_form"
             android:layout_width="match_parent"
-            android:layout_height="150dp"/>-->
+            android:layout_height="150dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
