--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -6,15 +6,55 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".fragments.InformationFragment">
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Creation date: "
+            android:textSize="10sp"/>
+
 
         <TextView
             android:id="@+id/creation_date_detail_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textSize="10sp"
             android:text="creation date here"/>
 
-        <LinearLayout
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/layout_date_of_sale"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Date of sale: "
+            android:textSize="10sp"/>
+
+
+        <TextView
+            android:id="@+id/date_of_sale_detail_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textSize="10sp"
+            android:text="date of sale here"/>
+
+    </LinearLayout>
+
+        <RelativeLayout
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -32,9 +72,9 @@
                 android:layout_height="wrap_content"
                 android:text="status here"
                 android:textSize="9sp"
-                android:layout_marginLeft="10dp"/>
+                android:layout_alignParentRight="true"/>
 
-        </LinearLayout>
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/text_view_description_detail_fragment"
@@ -42,7 +82,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="7dp"
             android:layout_marginRight="7dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
             android:text="this is description blah bla blabla this is cool place nice location and all very cool place." />
 
