--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -61,7 +61,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="7dp"
                 android:layout_marginRight="7dp"
                 android:text="Description"
                 android:textStyle="bold" />
@@ -80,7 +79,6 @@
             android:id="@+id/text_view_description_detail_fragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="7dp"
             android:layout_marginRight="7dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
@@ -252,7 +250,6 @@
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="7dp"
             android:text="Interests near this place :"
             android:textStyle="bold"/>
 
@@ -269,6 +266,43 @@
             android:layout_marginTop="15dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp" />
+
+    <TextView
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Location :"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:id="@+id/street_address_text_view_information"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="street address here"/>
+    <TextView
+        android:id="@+id/complement_text_view_information"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="complement"/>
+    <TextView
+        android:id="@+id/postal_code_and_city_text_view_information"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="postal code + city"/>
+    <TextView
+        android:id="@+id/country_text_view_information"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:text="country here"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.4dp"
+        android:background="@android:color/darker_gray"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
