- add new activity: map activity in navigation drawer menu - user can access to this map if internet is available - map shows users location and all places locations

--- a/app/src/main/res/menu/main_activity_drawer_menu.xml
+++ b/app/src/main/res/menu/main_activity_drawer_menu.xml
@@ -10,6 +10,11 @@
             android:title="Settings"
             android:icon="@drawable/ic_setting_toolbar"/>
 
+        <item
+            android:id="@+id/map"
+            android:title="Map view"
+            android:icon="@drawable/ic_map"/>
+
     </group>
 
 </menu>
