--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -9,27 +9,44 @@
     android:padding="16dp"
     tools:context=".fragments.InformationFragment">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Creation date: "
-            android:textSize="10sp"/>
+            android:orientation="horizontal">
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/creation_date_detail_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:textSize="10sp"
-            android:text="creation date here"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Creation date: "
+                    android:textSize="10sp"/>
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/creation_date_detail_text_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="10sp"
+                    android:text="creation date here"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/status_text_view_detail_fragment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="status here"
+                android:textSize="9sp"
+                android:layout_alignParentRight="true"/>
+
+        </RelativeLayout>
+
     <LinearLayout
         android:id="@+id/layout_date_of_sale"
         android:layout_width="wrap_content"
@@ -53,27 +70,12 @@
 
     </LinearLayout>
 
-        <RelativeLayout
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="7dp"
+                android:layout_marginTop="10dp"
                 android:text="Description"
                 android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/status_text_view_detail_fragment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="status here"
-                android:textSize="9sp"
-                android:layout_alignParentRight="true"/>
-
-        </RelativeLayout>
 
         <TextView
             android:id="@+id/text_view_description_detail_fragment"
@@ -99,6 +101,56 @@
             android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_weight="30"
+                android:layout_marginBottom="10dp">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/price_tag"/>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="20dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Price"
+                        android:layout_marginBottom="5dp"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/text_view_price_detail_fragment"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="price here"/>
+
+                </LinearLayout>
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/material_convert_price_button"
+                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Convert to euros"
+                        android:textSize="9sp"
+                        android:layout_alignParentRight="true"
+                        android:textAllCaps="false"/>
+
+                </RelativeLayout>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
