--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -8,6 +8,18 @@
     android:fitsSystemWindows="true"
     >
 
+    <TextView
+        android:id="@+id/text_view_detail_fragment_no_item_selected"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/blue"
+        android:text="Click on one item of the list to display information"
+        android:textColor="@android:color/white"
+        android:elevation="5dp"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:visibility="gone"/>
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/main.appbar"
         android:layout_width="match_parent"
@@ -38,6 +50,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -55,6 +68,8 @@
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
+
+
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nested_scroll_view"
