- formatted displayed date in format dd/MM/yy - add latLng attribute in address object instead of search it when want to display it on map

--- a/app/src/main/res/layout/activity_add_form.xml
+++ b/app/src/main/res/layout/activity_add_form.xml
@@ -36,6 +36,7 @@
                 android:layout_weight="50"
                 android:backgroundTint="@color/purpleAccent"
                 android:text="Type of place"
+                android:textSize="12sp"
                 android:textAllCaps="false"
                 app:icon="@drawable/house" />
 
@@ -46,6 +47,7 @@
                 android:layout_height="45dp"
                 android:layout_marginLeft="7dp"
                 android:layout_weight="50"
+                android:textSize="12sp"
                 android:backgroundTint="@color/purpleAccent"
                 android:text="Add pictures"
                 android:textAllCaps="false"
