--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -5,7 +5,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
 <item
     android:id="@+id/menu_search"
     app:showAsAction="ifRoom"
-    android:icon="@drawable/search_small"
+    android:icon="@drawable/ic_search_white_24"
     android:title="Search">
 </item>
 
