--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
 
     <color name="green">#1aa149</color>
     <color name="red">#cf002d</color>
+    <color name="white">#ffffff</color>
 </resources>
